--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,12 @@
 {{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
 {{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<div class="container">
+    <div class="topBand">
+    </div>
+    <div class="main">
+        {{outlet}}
+    </div>
+    <div class="footer">
+        <p>Copyright Sandesh Bothra</p>
+    </div>
+</div>
